// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ErrorMessage should allow a custom title and description: custom 1`] = `
<EmptyState
  titleText={<Title
  headingLevel="h2"
  size="lg"
>
  "Lorem ipsum"
</Title>}
  icon={[Function]}
  variant="full"
>
  <EmptyStateBody>
  "Dolor sit"
</EmptyStateBody>
</EmptyState>
`;

exports[`ErrorMessage should render a basic component: basic 1`] = `
<EmptyState
  titleText={<Title
  headingLevel="h2"
  size="lg"
>
  "t([
  "view.error",
  {
    "context": "title",
    "appName": "Quipucords"
  }
])"
</Title>}
  icon={[Function]}
  variant="full"
>
  <EmptyStateBody>
  "t([
  "view.error",
  {
    "context": "description"
  }
])"
</EmptyStateBody>
</EmptyState>
`;
